--- a/.github/workflows/plantuml.yml
+++ b/.github/workflows/plantuml.yml
@@ -13,29 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Set up Java
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
+      - name: Set up Java
+        uses: actions/setup-java@v2
+        with:
+          java-version: "11"
+          distribution: "adopt"
 
-    - name: Install PlantUML
-      run: sudo apt-get install plantuml
+      - name: Install PlantUML
+        run: sudo apt-get install plantuml
 
-    - name: Generate Diagrams
-      run: |
-        plantuml diagrams/context/*.puml
-        plantuml diagrams/container/*.puml
-        plantuml diagrams/component/*.puml
-        plantuml diagrams/code/*.puml
+      - name: Generate Diagrams
+        run: |
+          plantuml diagrams/context/*.puml
+          plantuml diagrams/container/*.puml
+          plantuml diagrams/component/*.puml
+          plantuml diagrams/code/*.puml
 
-    - name: Commit Diagrams
-      run: |
-        git config --local user.email "github-actions[bot]@users.noreply.github.com"
-        git config --local user.name "github-actions[bot]"
-        git add diagrams/**/*.png
-        git commit -m "Automated diagram generation"
-        git push origin main
-      if: success()
+      - name: Commit Diagrams
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add diagrams/**/*.png
+          git commit -m "Automated diagram generation"
+          git push origin main
+        if: success()
