--- a/.github/workflows/plantuml.yml
+++ b/.github/workflows/plantuml.yml
@@ -41,7 +41,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add diagrams/**/*.png
-          git commit -m "Automated diagram generation"
+          git commit -a -m "Automated diagram generation"
           git push origin main
         if: success()
